Changes to be committed: ❤ First Love! Valentine Update 	modified:   HPNY.html 	modified:   badapple.html 	modified:   common/footer.html 	modified:   index.html 	modified:   landing.html 	new file:   valentine.html 	new file:   video/utada_hikaru_first_love.mp4

--- a/badapple.html
+++ b/badapple.html
@@ -119,7 +119,7 @@
         <div class="wow bounceIn">
           <h1>🍎</h1>
           <h1 class="rainbowText">Bad Apple!!</h1>
-          <h2 class="shadows">
+          <h2 class="wow bounceIn shadows" data-wow-delay="0.2s">
             <i class="fa-solid fa-hand-pointer"></i> Tap to
             <span id="control-icon" onclick="myFunction()"
               ><i class="fa-solid fa-play"></i> &
