--- a/common/footer.html
+++ b/common/footer.html
@@ -38,7 +38,7 @@
               width="auto"
               height="55"
               src="img/TNIIcon.png"
-              onclick="location.href='HPNY.html'"
+              onclick="location.href='valentine.html'"
             />
             </span>
           </h5>
