--- a/HPNY.html
+++ b/HPNY.html
@@ -137,7 +137,7 @@
               <h1>🎉🎄🎆🎄🎉</h1>
               <h1 class="rainbowText">Happy New Year</h1>
               <h1 class="rainbowText">＼\ <span id="hpny"></span> /／</h1>
-              <h3 class="wow fadeInUp" data-wow-delay="0.2s">
+              <h3 class="wow bounceIn" data-wow-delay="0.2s">
                 <i class="fa-solid fa-hand-pointer"></i> Tap to
                 <span id="control-icon"
                   ><i class="fa-solid fa-play"></i> &
