--- a/landing.html
+++ b/landing.html
@@ -77,17 +77,17 @@
       <!--------------- navbar ends here --------------->
       <div class="snowflakes" aria-hidden="true">
         <div class="snowflake">💓</div>
+        <div class="snowflake">💗</div>
+        <div class="snowflake">💖</div>
         <div class="snowflake">💓</div>
+        <div class="snowflake">💗</div>
+        <div class="snowflake">💖</div>
         <div class="snowflake">💓</div>
+        <div class="snowflake">💗</div>
+        <div class="snowflake">💖</div>
         <div class="snowflake">💓</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💓</div>
+        <div class="snowflake">💗</div>
+        <div class="snowflake">💖</div>
       </div>
       <!--------------- hero section starts here --------------->
       <div rel="preload" as="image" class="bgimg wow fadeInUp black">
