--- a/common/footer.html
+++ b/common/footer.html
@@ -20,34 +20,15 @@
       <div class="row">
         <div class="col-md-4" id="personal">
           <h5 class="wow fadeInUp footer" data-wow-delay="0.1s">
-            <span
-              id="brand"
-              class="logo"
-            >
-            <img
-              rel="preload"
-              as="image"
-              width="auto"
-              height="55"
-              src="img/TNICyberWeb.png"
-              onclick="location.href='badapple.html'"
-            />
-            <img
-              rel="preload"
-              as="image"
-              width="auto"
-              height="55"
-              src="img/TNIIcon.png"
-              onclick="location.href='valentine.html'"
-            />
+            <span id="brand" class="logo">
+              <img rel="preload" as="image" width="auto" height="55" src="img/TNICyberWeb.png"
+                onclick="location.href='badapple.html'" />
+              <img rel="preload" as="image" width="auto" height="55" src="img/TNIIcon.png"
+                onclick="location.href='valentine.html'" />
             </span>
           </h5>
-          <p
-            class="wow fadeInUp list badge badge-pill circleScaleBtn2"
-            type="button"
-            data-wow-delay="0.2s"
-            onclick="window.open('https://creativecommons.org/licenses/by/4.0/')"
-          >
+          <p class="wow fadeInUp list badge badge-pill circleScaleBtn2" type="button" data-wow-delay="0.2s"
+            onclick="window.open('https://creativecommons.org/licenses/by/4.0/')">
             <i class="fab fa-creative-commons"></i>
             <i class="fab fa-creative-commons-by"></i>
             <i class="fab fa-creative-commons-share"></i>
@@ -56,16 +37,8 @@
 
         <div class="col-md-8" id="media">
           <ul>
-            <li
-              class="wow fadeInUp"
-              data-wow-delay="0.3s"
-              data-toggle="modal"
-              data-target="#social"
-            >
-              <p
-                class="wow fadeInUp list1 badge badge-pill badge-light circleScaleBtn2"
-                type="button"
-              >
+            <li class="wow fadeInUp" data-wow-delay="0.3s" data-toggle="modal" data-target="#social">
+              <p class="wow fadeInUp list1 badge badge-pill badge-light circleScaleBtn2" type="button">
                 <i class="fab fa-facebook-messenger"></i>
                 <i class="fab fa-facebook"></i>
                 <i class="fab fa-discord"></i>
@@ -77,12 +50,8 @@
               </p>
             </li>
           </ul>
-          <p
-            class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2"
-            type="button"
-            data-wow-delay="0.4s"
-            onclick="location.href='termsofservice.html'"
-          >
+          <p class="wow fadeInUp list2 badge badge-pill badge-light circleScaleBtn2" type="button" data-wow-delay="0.4s"
+            onclick="location.href='termsofservice.html'">
             <i class="fas fa-info-circle"></i> Terms of Service
           </p>
         </div>
