--- a/termsofservice.html
+++ b/termsofservice.html
@@ -1,244 +1,211 @@
 <!DOCTYPE html>
 <html lang="th">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="TNI Cybersec" content="Terms of service" />
 
-    <meta property="og:title" content="TNI Cybersec" />
-    <meta property="og:image" content="/img/CyberPic.jpg" />
-    <meta property="og:description" content="Terms of service" />
-    <meta property="og:url" content="https://tni-cybersec.github.io" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="TNI Cybersec" content="Terms of service" />
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="TNI Cybersec" />
-    <meta name="twitter:image" content="/img/CyberPic.jpg" />
-    <meta name="twitter:description" content="Terms of service" />
-    <meta name="twitter:site" content="https://tni-cybersec.github.io" />
+  <meta property="og:title" content="TNI Cybersec" />
+  <meta property="og:image" content="/img/CyberPic.jpg" />
+  <meta property="og:description" content="Terms of service" />
+  <meta property="og:url" content="https://tni-cybersec.github.io" />
 
-    <title>TNI Cybersec | Terms of Service</title>
-    <meta name="description" content="Terms of service" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="TNI Cybersec" />
+  <meta name="twitter:image" content="/img/CyberPic.jpg" />
+  <meta name="twitter:description" content="Terms of service" />
+  <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="css/style.css" />
+  <title>TNI Cybersec | Terms of Service</title>
+  <meta name="description" content="Terms of service" />
 
-    <!-- bootstrap cdns -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="css/style.css" />
 
-    <!-- fontawesome cdns -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v6.1.1/css/all.css"
-    />
+  <!-- bootstrap cdns -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
 
-    <!-- google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Athiti:100,100i,300,300i,400,400i,500,500i,700,700i"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Mitr:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
-      rel="stylesheet"
-    />
+  <!-- fontawesome cdns -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" />
 
-    <!-- favicon -->
-    <link rel="icon" href="img/CyberPic.jpg" />
-    <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Athiti:100,100i,300,300i,400,400i,500,500i,700,700i"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Mitr:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet" />
 
-    <!-- for on scroll animations -->
-    <link rel="stylesheet" href="css/animate.min.css" />
-    <script src="js/wow.min.js"></script>
-  </head>
+  <!-- favicon -->
+  <link rel="icon" href="img/CyberPic.jpg" />
+  <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
 
-  <body>
-    <!-- messenger plugin -->
-    <div id="msg-plugin"></div>
+  <!-- for on scroll animations -->
+  <link rel="stylesheet" href="css/animate.min.css" />
+  <script src="js/wow.min.js"></script>
+</head>
 
-    <!-- loader -->
-    <div id="loader"></div>
+<body>
+  <!-- messenger plugin -->
+  <div id="msg-plugin"></div>
 
-    <div class="wrapper">
-      <!--------------- navbar starts here --------------->
-      <div id="navigation"></div>
-      <!--------------- navbar ends here --------------->
+  <!-- loader -->
+  <div id="loader"></div>
 
-      <div class="whitespace"></div>
+  <div class="wrapper">
+    <!--------------- navbar starts here --------------->
+    <div id="navigation"></div>
+    <!--------------- navbar ends here --------------->
 
-      <!--------------- hero section starts here --------------->
-      <div class="container user-select-none">
-        <div class="hero-content">
-          <br />
+    <div class="whitespace"></div>
 
-          <div class="row">
-            <div class="col-lg-12">
-              <h1 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fas fa-info-circle"></i> Terms of Service
-              </h1>
-              <p class="wow fadeInUp" data-wow-delay="0.3s">
-                <i class="fas fa-info-circle"></i>
-                ข้อตกลงเงื่อนใขในการใช้งานบริการของเรา
-              </p>
-            </div>
+    <!--------------- hero section starts here --------------->
+    <div class="container user-select-none">
+      <div class="hero-content">
+        <br />
+
+        <div class="row">
+          <div class="col-lg-12">
+            <h1 class="wow fadeInUp" data-wow-delay="0.4s">
+              <i class="fas fa-info-circle"></i> Terms of Service
+            </h1>
+            <p class="wow fadeInUp" data-wow-delay="0.3s">
+              <i class="fas fa-info-circle"></i>
+              ข้อตกลงเงื่อนใขในการใช้งานบริการของเรา
+            </p>
           </div>
         </div>
       </div>
-
-      <!--------------- hero section ends here --------------->
-
-      <!--------------- content info section starts here --------------->
-
-      <div class="container user-select-none">
-        <div class="hero-content">
-          <div class="row">
-            <div class="col-lg-12">
-              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fas fa-server"></i>
-                ข้อตกลงด้านข้อมูลและด้านความเป็นส่วนตัว (PDPA)
-              </h2>
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
-                1. ทางเราจะไม่เก็บข้อมูลส่วนตัวของท่านแต่อย่างไร
-              </p>
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
-                2. ทางเราจะไม่เปิดเผยข้อมูลตามความสมัครใจของท่านเป็นรายบุคคล
-              </p>
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
-                3. ทางเราจะล้างข้อมูลในอดีตได้ตามความเหมาะสมหรือเมื่อคุณร้องขอ
-              </p>
-              <br />
-
-              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="fab fa-creative-commons"></i>
-                <i class="fab fa-creative-commons-by"></i>
-                <i class="fab fa-creative-commons-share"></i> CC-BY
-              </h2>
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
-                CC-BY อนุญาตให้ผู้อื่นทำซ้ำ แจกจ่าย
-                หรือแสดงและนำเสนอชิ้นงานดังกล่าว
-                และสร้างงานดัดแปลงจากชิ้นงานดังกล่าวได้
-                เฉพาะกรณีที่ได้แสดงเครดิตตามที่ระบุไว้
-                <br />
-              </p>
-            </div>
-          </div>
-          <br />
-
-          <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-            <i class="fa-solid fa-leaf"></i> รักษ์โลก
-          </h2>
-          <p class="wow fadeInUp" data-wow-delay="0.6s">
-            เว็ปของทางเรานั้นเป็น Always Dark Mode ทำให้อุปกรณ์ที่ใช้หน้าจอ OLED
-            หรือ Mini LED สามารถลดการใช้พลังงานลงได้และประหยัดพลังงานได้มากขึ้น!
-          </p>
-
-          <br />
-          <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-            <img
-              rel="preload"
-              as="image"
-              width="auto"
-              height="35"
-              src="img/Open-source.png"
-            />
-            Open-source
-          </h2>
-          <p class="wow fadeInUp" data-wow-delay="0.6s">
-            เว็ปของทางเรานั้นเป็น All open-source ท่านสามารถดู source code
-            ของเว็ปทั้งหมดได้ที่ <i class="fas fa-arrow-circle-down"></i>
-          </p>
-          <button
-            type="button"
-            onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io')"
-            class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
-            data-wow-delay="0.6s"
-          >
-            <i class="fab fa-github"></i> TNI Cybersec
-          </button>
-          <br />
-
-          <div class="row user-select-none">
-            <div class="col-lg-12">
-              <br />
-              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-                <i class="far fa-window-maximize"></i> Web Information
-              </h2>
-              <h5 class="wow fadeInUp" data-wow-delay="0.6s">
-                <i class="fas fa-cogs"></i> <span id="version"></span>
-                <span class="badge badge-warning"><span id="year"></span></span>
-              </h5>
-              <button
-                type="button"
-                onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/releases')"
-                class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
-                data-wow-delay="0.6s"
-              >
-                <i class="fa-brands fa-hotjar"></i> New Feature!
-              </button>
-              <br />
-
-              <p class="wow fadeInUp" data-wow-delay="0.6s">
-                <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
-                <span class="badge badge-warning"
-                  ><i class="fas fa-exclamation-circle"></i> Issues</span
-                >
-                ที่ <i class="fas fa-arrow-circle-down"></i>
-              </p>
-
-              <button
-                type="button"
-                onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/issues')"
-                class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
-                data-wow-delay="0.5s"
-              >
-                <i class="fab fa-github"></i> TNI Cybersec
-              </button>
-              <br />
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!--------------- types section ends here --------------->
-
-      <!--------------- footer starts here --------------->
-      <div id="footer"></div>
-      <!--------------- footer ends here --------------->
-
-      <br />
     </div>
 
-    <!-- jQuery -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    <!-- Bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
-    ></script>
+    <!--------------- hero section ends here --------------->
 
-    <!-- javascript -->
-    <script src="js/script.js"></script>
-    <script src="js/version.js"></script>
+    <!--------------- content info section starts here --------------->
 
-    <!-- greensock cdn -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script> -->
+    <div class="container user-select-none">
+      <div class="hero-content">
+        <div class="row">
+          <div class="col-lg-12">
+            <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+              <i class="fas fa-server"></i>
+              ข้อตกลงด้านข้อมูลและด้านความเป็นส่วนตัว (PDPA)
+            </h2>
+            <p class="wow fadeInUp" data-wow-delay="0.6s">
+              1. ทางเราจะไม่เก็บข้อมูลส่วนตัวของท่านแต่อย่างไร
+            </p>
+            <p class="wow fadeInUp" data-wow-delay="0.6s">
+              2. ทางเราจะไม่เปิดเผยข้อมูลตามความสมัครใจของท่านเป็นรายบุคคล
+            </p>
+            <p class="wow fadeInUp" data-wow-delay="0.6s">
+              3. ทางเราจะล้างข้อมูลในอดีตได้ตามความเหมาะสมหรือเมื่อคุณร้องขอ
+            </p>
+            <br />
 
-    <script type="text/javascript">
-      $(function () {
-        $("#contact").modal({ backdrop: "static", keyboard: false });
-      });
+            <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+              <i class="fab fa-creative-commons"></i>
+              <i class="fab fa-creative-commons-by"></i>
+              <i class="fab fa-creative-commons-share"></i> CC-BY
+            </h2>
+            <p class="wow fadeInUp" data-wow-delay="0.6s">
+              CC-BY อนุญาตให้ผู้อื่นทำซ้ำ แจกจ่าย
+              หรือแสดงและนำเสนอชิ้นงานดังกล่าว
+              และสร้างงานดัดแปลงจากชิ้นงานดังกล่าวได้
+              เฉพาะกรณีที่ได้แสดงเครดิตตามที่ระบุไว้
+              <br />
+            </p>
+          </div>
+        </div>
+        <br />
 
-      new WOW().init();
-    </script>
-  </body>
+        <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+          <i class="fa-solid fa-leaf"></i> รักษ์โลก
+        </h2>
+        <p class="wow fadeInUp" data-wow-delay="0.6s">
+          เว็ปของทางเรานั้นเป็น Always Dark Mode ทำให้อุปกรณ์ที่ใช้หน้าจอ OLED
+          หรือ Mini LED สามารถลดการใช้พลังงานลงได้และประหยัดพลังงานได้มากขึ้น!
+        </p>
+
+        <br />
+        <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+          <img rel="preload" as="image" width="auto" height="35" src="img/Open-source.png" />
+          Open-source
+        </h2>
+        <p class="wow fadeInUp" data-wow-delay="0.6s">
+          เว็ปของทางเรานั้นเป็น All open-source ท่านสามารถดู source code
+          ของเว็ปทั้งหมดได้ที่ <i class="fas fa-arrow-circle-down"></i>
+        </p>
+        <button type="button" onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io')"
+          class="btn btn-outline-light btn-block btn-lg wow fadeInUp" data-wow-delay="0.6s">
+          <i class="fab fa-github"></i> TNI Cybersec
+        </button>
+        <br />
+
+        <div class="row user-select-none">
+          <div class="col-lg-12">
+            <br />
+            <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+              <i class="far fa-window-maximize"></i> Web Information
+            </h2>
+            <h5 class="wow fadeInUp" data-wow-delay="0.6s">
+              <i class="fas fa-cogs"></i> <span id="version"></span>
+              <span class="badge badge-warning"><span id="year"></span></span>
+            </h5>
+            <button type="button"
+              onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/releases')"
+              class="btn btn-outline-light btn-block btn-lg wow fadeInUp" data-wow-delay="0.6s">
+              <i class="fa-brands fa-hotjar"></i> New Feature!
+            </button>
+            <br />
+
+            <p class="wow fadeInUp" data-wow-delay="0.6s">
+              <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
+              <span class="badge badge-warning"><i class="fas fa-exclamation-circle"></i> Issues</span>
+              ที่ <i class="fas fa-arrow-circle-down"></i>
+            </p>
+
+            <button type="button" onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/issues')"
+              class="btn btn-outline-light btn-block btn-lg wow fadeInUp" data-wow-delay="0.5s">
+              <i class="fab fa-github"></i> TNI Cybersec
+            </button>
+            <br />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--------------- types section ends here --------------->
+
+    <!--------------- footer starts here --------------->
+    <div id="footer"></div>
+    <!--------------- footer ends here --------------->
+
+    <br />
+  </div>
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
+
+  <!-- javascript -->
+  <script src="js/script.js"></script>
+  <script src="js/version.js"></script>
+
+  <!-- greensock cdn -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script> -->
+
+  <script type="text/javascript">
+    $(function () {
+      $("#contact").modal({ backdrop: "static", keyboard: false });
+    });
+
+    new WOW().init();
+  </script>
+</body>
+
 </html>
