--- a/common/cookie-banner.html
+++ b/common/cookie-banner.html
@@ -5,17 +5,10 @@
     เราใช้คุกกี้ในเว็บไซต์นี้เพื่อให้คุณได้รับประสบการณ์ที่ดีที่สุดในการให้บริการนี้
     โปรดอ่านข้อมูลเพิ่มเติมได้ที่ <i class="fas fa-arrow-circle-down"></i>
   </p>
-  <button
-    type="button"
-    onclick="location.href='termsofservice.html'"
-    class="btn btn-outline-dark btn-block"
-  >
+  <button type="button" onclick="location.href='termsofservice.html'" class="btn btn-outline-dark btn-block">
     <i class="fas fa-info-circle"></i> Terms of service
   </button>
-  <button
-    type="button"
-    class="cookie-btn btn btn-outline-dark btn-warning btn-lg btn-block"
-  >
+  <button type="button" class="cookie-btn btn btn-outline-dark btn-warning btn-lg btn-block">
     <i class="fas fa-check-circle"></i> ยอมรับ
   </button>
   <br />
