--- a/index.html
+++ b/index.html
@@ -1,240 +1,196 @@
 <!DOCTYPE html>
 <html lang="th">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="TNI Cybersec" content="Home" />
 
-    <meta property="og:title" content="TNI Cybersec" />
-    <meta property="og:image" content="/img/CyberPic.jpg" />
-    <meta
-      property="og:description"
-      content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
-    />
-    <meta property="og:url" content="https://tni-cybersec.github.io" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="TNI Cybersec" content="Home" />
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="TNI Cybersec" />
-    <meta name="twitter:image" content="/img/CyberPic.jpg" />
-    <meta
-      name="twitter:description"
-      content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
-    />
-    <meta name="twitter:site" content="https://tni-cybersec.github.io" />
+  <meta property="og:title" content="TNI Cybersec" />
+  <meta property="og:image" content="/img/CyberPic.jpg" />
+  <meta property="og:description"
+    content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec." />
+  <meta property="og:url" content="https://tni-cybersec.github.io" />
 
-    <title>TNI Cybersec | Home</title>
-    <meta
-      name="description"
-      content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
-    />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="TNI Cybersec" />
+  <meta name="twitter:image" content="/img/CyberPic.jpg" />
+  <meta name="twitter:description"
+    content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec." />
+  <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="css/style.css" />
+  <title>TNI Cybersec | Home</title>
+  <meta name="description"
+    content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec." />
 
-    <!-- bootstrap cdns -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="css/style.css" />
 
-    <!-- fontawesome cdns -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v6.1.1/css/all.css"
-    />
+  <!-- bootstrap cdns -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
 
-    <!-- google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Athiti:100,100i,300,300i,400,400i,500,500i,700,700i"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Mitr:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
-      rel="stylesheet"
-    />
+  <!-- fontawesome cdns -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" />
 
-    <!-- favicon -->
-    <link rel="icon" href="img/CyberPic.jpg" />
-    <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
-    <link rel="manifest" href="common/manifest.json" />
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Athiti:100,100i,300,300i,400,400i,500,500i,700,700i"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Mitr:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet" />
 
-    <!-- for on scroll animations -->
-    <link rel="stylesheet" href="css/animate.min.css" />
-    <script src="js/wow.min.js"></script>
+  <!-- favicon -->
+  <link rel="icon" href="img/CyberPic.jpg" />
+  <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
+  <link rel="manifest" href="common/manifest.json" />
 
-    <!-- CountAPI -->
-    <script
-      async
-      src="https://api.countapi.xyz/hit/tni-cybersec.github.io/visits"
-    ></script>
-  </head>
+  <!-- for on scroll animations -->
+  <link rel="stylesheet" href="css/animate.min.css" />
+  <script src="js/wow.min.js"></script>
 
-  <body>
-    <!-- messenger plugin -->
-    <div id="msg-plugin"></div>
+  <!-- CountAPI -->
+  <script async src="https://api.countapi.xyz/hit/tni-cybersec.github.io/visits"></script>
+</head>
 
-    <!-- loader -->
-    <div id="loader"></div>
+<body>
+  <!-- messenger plugin -->
+  <div id="msg-plugin"></div>
 
-    <div class="wrapper">
-      <!--------------- navbar starts here --------------->
-      <div id="navigation"></div>
-      <!--------------- navbar ends here --------------->
-      <div class="snowflakes" aria-hidden="true">
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💗</div>
-        <div class="snowflake">💖</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💗</div>
-        <div class="snowflake">💖</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💗</div>
-        <div class="snowflake">💖</div>
-        <div class="snowflake">💓</div>
-        <div class="snowflake">💗</div>
-        <div class="snowflake">💖</div>
-      </div>
-      <!--------------- hero section starts here --------------->
-      <div rel="preload" as="image" class="bgimg wow fadeInUp black">
-        <div class="hero">
-          <div class="header">
-            <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-              <span id="status1"></span>
-            </h1>
-            <h5 class="wow fadeInUp user-select-none" data-wow-delay="0.3s">
-              <span id="status2"></span>
-            </h5>
-          </div>
-        </div>
-        <div class="scroll-down"><i class="fas fa-arrow-circle-down"></i></div>
-      </div>
+  <!-- loader -->
+  <div id="loader"></div>
+
+  <div class="wrapper">
+    <!--------------- navbar starts here --------------->
+    <div id="navigation"></div>
+    <!--------------- navbar ends here --------------->
+    <div class="snowflakes" aria-hidden="true">
+      <div class="snowflake">💓</div>
+      <div class="snowflake">💗</div>
+      <div class="snowflake">💖</div>
+      <div class="snowflake">💓</div>
+      <div class="snowflake">💗</div>
+      <div class="snowflake">💖</div>
+      <div class="snowflake">💓</div>
+      <div class="snowflake">💗</div>
+      <div class="snowflake">💖</div>
+      <div class="snowflake">💓</div>
+      <div class="snowflake">💗</div>
+      <div class="snowflake">💖</div>
     </div>
-    <!--------------- hero section ends here --------------->
-
-    <!--------------- projects section starts here --------------->
-    <div class="container-fluid">
-      <br />
-      <h6 class="wow fadeInUp user-select-none" data-wow-delay="0.2s">
-        <img
-          rel="preload"
-          as="image"
-          width="auto"
-          height="22"
-          src="img/TNICyberICON.png"
-        />
-        <span id="hero"></span>
-      </h6>
-
-      <div class="vertical wow fadeInUp"></div>
-      <br />
-
-      <div class="whitespace"></div>
-      <div class="whitespace"></div>
-
-      <div class="container">
-        <div class="row">
-          <div
-            rel="preload"
-            as="image"
-            type="button"
-            class="col-lg-12 type type1 border border-light wow fadeInUp circleScaleBtn"
-            data-wow-delay="0.2s"
-            onclick="location.href='cybersec.html'"
-          >
-            <div class="hero">
-              <div class="centered" type="button">
-                <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-                  <i class="fas fa-user-ninja"></i><br />Cybersec
-                </h1>
-              </div>
-            </div>
-          </div>
+    <!--------------- hero section starts here --------------->
+    <div rel="preload" as="image" class="bgimg wow fadeInUp black">
+      <div class="hero">
+        <div class="header">
+          <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
+            <span id="status1"></span>
+          </h1>
+          <h5 class="wow fadeInUp user-select-none" data-wow-delay="0.3s">
+            <span id="status2"></span>
+          </h5>
         </div>
       </div>
-
-      <div class="whitespace"></div>
-
-      <div class="container">
-        <div class="row">
-          <div
-            rel="preload"
-            as="image"
-            type="button"
-            class="col-lg-12 type type2 border border-light wow fadeInUp circleScaleBtn"
-            data-wow-delay="0.2s"
-            onclick="location.href='activities.html'"
-          >
-            <div class="hero">
-              <div class="centered" type="button">
-                <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-                  <i class="fas fa-fire-alt"></i><br />Activities
-                </h1>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="whitespace"></div>
-
-      <div class="container">
-        <div class="row">
-          <div
-            rel="preload"
-            as="image"
-            type="button"
-            class="col-lg-12 type type3 border border-light wow fadeInUp circleScaleBtn"
-            data-wow-delay="0.2s"
-            onclick="location.href='aboutus.html'"
-          >
-            <div class="hero">
-              <div class="centered" type="button">
-                <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-                  <i class="fas fa-info-circle"></i><br />About Us
-                </h1>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="scroll-down"><i class="fas fa-arrow-circle-down"></i></div>
     </div>
-    <!--------------- projects section ends here --------------->
+  </div>
+  <!--------------- hero section ends here --------------->
 
-    <!--------------- footer starts here --------------->
-    <div id="footer"></div>
-    <!--------------- footer ends here --------------->
+  <!--------------- projects section starts here --------------->
+  <div class="container-fluid">
+    <br />
+    <h6 class="wow fadeInUp user-select-none" data-wow-delay="0.2s">
+      <img rel="preload" as="image" width="auto" height="22" src="img/TNICyberICON.png" />
+      <span id="hero"></span>
+    </h6>
 
+    <div class="vertical wow fadeInUp"></div>
     <br />
 
-    <div id="cookie-banner"></div>
+    <div class="whitespace"></div>
+    <div class="whitespace"></div>
 
-    <!-- jQuery -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    <!-- Bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
-    ></script>
+    <div class="container">
+      <div class="row">
+        <div rel="preload" as="image" type="button"
+          class="col-lg-12 type type1 border border-light wow fadeInUp circleScaleBtn" data-wow-delay="0.2s"
+          onclick="location.href='cybersec.html'">
+          <div class="hero">
+            <div class="centered" type="button">
+              <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
+                <i class="fas fa-user-ninja"></i><br />Cybersec
+              </h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <!-- javascript -->
-    <script src="js/script.js"></script>
-    <script src="js/hero.js"></script>
-    <script src="js/app.js"></script>
+    <div class="whitespace"></div>
 
-    <!-- greensock cdn -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script> -->
+    <div class="container">
+      <div class="row">
+        <div rel="preload" as="image" type="button"
+          class="col-lg-12 type type2 border border-light wow fadeInUp circleScaleBtn" data-wow-delay="0.2s"
+          onclick="location.href='activities.html'">
+          <div class="hero">
+            <div class="centered" type="button">
+              <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
+                <i class="fas fa-fire-alt"></i><br />Activities
+              </h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <script type="text/javascript">
-      new WOW().init();
-    </script>
-  </body>
+    <div class="whitespace"></div>
+
+    <div class="container">
+      <div class="row">
+        <div rel="preload" as="image" type="button"
+          class="col-lg-12 type type3 border border-light wow fadeInUp circleScaleBtn" data-wow-delay="0.2s"
+          onclick="location.href='aboutus.html'">
+          <div class="hero">
+            <div class="centered" type="button">
+              <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
+                <i class="fas fa-info-circle"></i><br />About Us
+              </h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--------------- projects section ends here --------------->
+
+  <!--------------- footer starts here --------------->
+  <div id="footer"></div>
+  <!--------------- footer ends here --------------->
+
+  <br />
+
+  <div id="cookie-banner"></div>
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
+
+  <!-- javascript -->
+  <script src="js/script.js"></script>
+  <script src="js/hero.js"></script>
+  <script src="js/app.js"></script>
+
+  <!-- greensock cdn -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script> -->
+
+  <script type="text/javascript">
+    new WOW().init();
+  </script>
+</body>
+
 </html>
