--- a/stats.html
+++ b/stats.html
@@ -1,182 +1,149 @@
 <!DOCTYPE html>
 <html lang="th">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="TNI Cybersec" content="Landing" />
 
-    <meta property="og:title" content="TNI Cybersec" />
-    <meta property="og:image" content="/img/CyberPic.jpg" />
-    <meta property="og:description" content="Landing" />
-    <meta property="og:url" content="https://tni-cybersec.github.io" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="TNI Cybersec" content="Landing" />
 
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="TNI Cybersec" />
-    <meta name="twitter:image" content="/img/CyberPic.jpg" />
-    <meta name="twitter:description" content="Landing" />
-    <meta name="twitter:site" content="https://tni-cybersec.github.io" />
+  <meta property="og:title" content="TNI Cybersec" />
+  <meta property="og:image" content="/img/CyberPic.jpg" />
+  <meta property="og:description" content="Landing" />
+  <meta property="og:url" content="https://tni-cybersec.github.io" />
 
-    <title>TNI Cybersec | 📊 Stats</title>
-    <meta name="description" content="Landing" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="TNI Cybersec" />
+  <meta name="twitter:image" content="/img/CyberPic.jpg" />
+  <meta name="twitter:description" content="Landing" />
+  <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <!-- stylesheet -->
-    <link rel="stylesheet" href="css/style.css" />
+  <title>TNI Cybersec | 📊 Stats</title>
+  <meta name="description" content="Landing" />
 
-    <!-- bootstrap cdns -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-      integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
+  <!-- stylesheet -->
+  <link rel="stylesheet" href="css/style.css" />
 
-    <!-- fontawesome cdns -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v6.1.1/css/all.css"
-    />
+  <!-- bootstrap cdns -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
 
-    <!-- google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Athiti:100,100i,300,300i,400,400i,500,500i,700,700i"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Mitr:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
-      rel="stylesheet"
-    />
+  <!-- fontawesome cdns -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" />
 
-    <!-- favicon -->
-    <link rel="icon" href="img/CyberPic.jpg" />
-    <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
-    <link rel="manifest" href="common/manifest.json" />
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Athiti:100,100i,300,300i,400,400i,500,500i,700,700i"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Mitr:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet" />
 
-    <!-- for on scroll animations -->
-    <link rel="stylesheet" href="css/animate.min.css" />
-    <script src="js/wow.min.js"></script>
-  </head>
+  <!-- favicon -->
+  <link rel="icon" href="img/CyberPic.jpg" />
+  <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
+  <link rel="manifest" href="common/manifest.json" />
 
-  <body>
-    <!-- messenger plugin -->
-    <div id="msg-plugin"></div>
+  <!-- for on scroll animations -->
+  <link rel="stylesheet" href="css/animate.min.css" />
+  <script src="js/wow.min.js"></script>
+</head>
 
-    <!-- loader -->
-    <div id="loader"></div>
+<body>
+  <!-- messenger plugin -->
+  <div id="msg-plugin"></div>
 
-    <div class="wrapper">
-      <!--------------- navbar starts here --------------->
-      <nav>
-        <span
-          id="brand"
-          class="circleScaleBtn2 logo user-select-none wow bounceIn"
-          data-wow-delay="0.6s"
-          onclick="location.href='index.html'"
-        >
-          <img
-            rel="preload"
-            as="image"
-            width="auto"
-            height="55"
-            src="img/TNICyberWeb.png"
-          />
-        </span>
-      </nav>
-      <!--------------- navbar ends here --------------->
-      <div class="snowflakes" aria-hidden="true">
-        <div class="snowflake">🛬</div>
-        <div class="snowflake">💻</div>
-        <div class="snowflake">👨‍💻</div>
-        <div class="snowflake">🛬</div>
-        <div class="snowflake">💻</div>
-        <div class="snowflake">👨‍💻</div>
-        <div class="snowflake">🛬</div>
-        <div class="snowflake">💻</div>
-        <div class="snowflake">👨‍💻</div>
-        <div class="snowflake">🛬</div>
-        <div class="snowflake">💻</div>
-        <div class="snowflake">👨‍💻</div>
-      </div>
-      <!--------------- hero section starts here --------------->
-      <div
-        rel="preload"
-        as="image"
-        class="bgimg black wow bounceIn user-select-none"
-        data-wow-delay="0.1s"
-      >
-        <div class="hero">
-          <div class="header">
-            <div class="h1 text-center mb-3 wow bounceIn" data-wow-delay="0.2s">
-              💻Page Views!
-            </div>
-            <div
-              id="visits"
-              class="text-center wow bounceIn"
-              data-wow-delay="0.3s"
-            ></div>
-            <div class="h3 text-center mt-3 wow bounceIn" data-wow-delay="0.4s">
-              🛬Landing <span id="landing-hits">...</span> Hits!
-            </div>
+  <!-- loader -->
+  <div id="loader"></div>
+
+  <div class="wrapper">
+    <!--------------- navbar starts here --------------->
+    <nav>
+      <span id="brand" class="circleScaleBtn2 logo user-select-none wow bounceIn" data-wow-delay="0.6s"
+        onclick="location.href='index.html'">
+        <img rel="preload" as="image" width="auto" height="55" src="img/TNICyberWeb.png" />
+      </span>
+    </nav>
+    <!--------------- navbar ends here --------------->
+    <div class="snowflakes" aria-hidden="true">
+      <div class="snowflake">🛬</div>
+      <div class="snowflake">💻</div>
+      <div class="snowflake">👨‍💻</div>
+      <div class="snowflake">🛬</div>
+      <div class="snowflake">💻</div>
+      <div class="snowflake">👨‍💻</div>
+      <div class="snowflake">🛬</div>
+      <div class="snowflake">💻</div>
+      <div class="snowflake">👨‍💻</div>
+      <div class="snowflake">🛬</div>
+      <div class="snowflake">💻</div>
+      <div class="snowflake">👨‍💻</div>
+    </div>
+    <!--------------- hero section starts here --------------->
+    <div rel="preload" as="image" class="bgimg black wow bounceIn user-select-none" data-wow-delay="0.1s">
+      <div class="hero">
+        <div class="header">
+          <div class="h1 text-center mb-3 wow bounceIn" data-wow-delay="0.2s">
+            💻Page Views!
+          </div>
+          <div id="visits" class="text-center wow bounceIn" data-wow-delay="0.3s"></div>
+          <div class="h3 text-center mt-3 wow bounceIn" data-wow-delay="0.4s">
+            🛬Landing <span id="landing-hits">...</span> Hits!
           </div>
         </div>
       </div>
     </div>
-    <!--------------- hero section ends here --------------->
+  </div>
+  <!--------------- hero section ends here --------------->
 
-    <!--------------- footer starts here --------------->
-    <!--------------- footer ends here --------------->
-    <div id="cookie-banner"></div>
+  <!--------------- footer starts here --------------->
+  <!--------------- footer ends here --------------->
+  <div id="cookie-banner"></div>
 
-    <!-- jQuery -->
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    <!-- Bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
-    ></script>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
 
-    <!-- javascript -->
-    <script src="js/script.js"></script>
-    <script src="js/hero.js"></script>
-    <script src="js/app.js"></script>
+  <!-- javascript -->
+  <script src="js/script.js"></script>
+  <script src="js/hero.js"></script>
+  <script src="js/app.js"></script>
 
-    <script type="text/javascript">
-      new WOW().init();
+  <script type="text/javascript">
+    new WOW().init();
 
-      // Vistors counter
-      $.getJSON(
-        "https://api.countapi.xyz/get/tni-cybersec.github.io/visits",
-        function (response) {
-          const visits = response.value;
-          const counters = [
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/0.gif">',
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/1.gif">',
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/2.gif">',
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/3.gif">',
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/4.gif">',
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/5.gif">',
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/6.gif">',
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/7.gif">',
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/8.gif">',
-            '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/9.gif">',
-          ];
-          [...String(visits)].forEach((digit) => {
-            document.getElementById("visits").innerHTML += counters[digit];
-          });
-        }
-      );
-      $.getJSON(
-        "https://api.countapi.xyz/get/tni-cybersec.github.io/landing",
-        function (response) {
-          $("#landing-hits").text(response.value);
-        }
-      );
-    </script>
-  </body>
+    // Vistors counter
+    $.getJSON(
+      "https://api.countapi.xyz/get/tni-cybersec.github.io/visits",
+      function (response) {
+        const visits = response.value;
+        const counters = [
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/0.gif">',
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/1.gif">',
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/2.gif">',
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/3.gif">',
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/4.gif">',
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/5.gif">',
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/6.gif">',
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/7.gif">',
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/8.gif">',
+          '<img src="https://raw.githubusercontent.com/journey-ad/Moe-counter/master/assets/theme/rule34/9.gif">',
+        ];
+        [...String(visits)].forEach((digit) => {
+          document.getElementById("visits").innerHTML += counters[digit];
+        });
+      }
+    );
+    $.getJSON(
+      "https://api.countapi.xyz/get/tni-cybersec.github.io/landing",
+      function (response) {
+        $("#landing-hits").text(response.value);
+      }
+    );
+  </script>
+</body>
+
 </html>
