Changes to be committed: Add apple-touch-icon 	modified:   404.html 	modified:   HPNY.html 	modified:   aboutus.html 	modified:   activities.html 	modified:   badapple.html 	modified:   common/manifest.json 	modified:   cybersec.html 	modified:   index.html 	modified:   landing.html 	modified:   stats.html 	modified:   termsofservice.html 	modified:   valentine.html

--- a/aboutus.html
+++ b/aboutus.html
@@ -39,8 +39,9 @@
     rel="stylesheet" />
 
   <!-- favicon -->
-  <link rel="icon" href="img/CyberPic.jpg" />
   <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
+  <link rel="apple-touch-icon" href="img/TNICyberWebIcon.ico">
+  <link rel="manifest" href="common/manifest.json" />
 
   <!-- for on scroll animations -->
   <link rel="stylesheet" href="css/animate.min.css" />
