--- a/badapple.html
+++ b/badapple.html
@@ -29,8 +29,9 @@
     rel="stylesheet" />
 
   <!-- favicon -->
-  <link rel="icon" href="img/CyberPic.jpg" />
   <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
+  <link rel="apple-touch-icon" href="img/TNICyberWebIcon.ico">
+  <link rel="manifest" href="common/manifest.json" />
 
   <!-- terminal effect -->
   <script src="js/t.min.js"></script>
