--- a/cybersec.html
+++ b/cybersec.html
@@ -39,8 +39,9 @@
     rel="stylesheet" />
 
   <!-- favicon -->
-  <link rel="icon" href="img/CyberPic.jpg" />
   <link rel="shortcut icon" href="img/TNICyberWebIcon.ico" />
+  <link rel="apple-touch-icon" href="img/TNICyberWebIcon.ico">
+  <link rel="manifest" href="common/manifest.json" />
 
   <!-- for on scroll animations -->
   <link rel="stylesheet" href="css/animate.min.css" />
