Changes to be committed: Fix UI 	modified:   offline.html

--- a/offline.html
+++ b/offline.html
@@ -48,7 +48,7 @@
     h1 {
       letter-spacing: -1px;
       line-height: 60px;
-      font-size: 25px;
+      font-size: 2.75vh;
       font-weight: 300;
       margin: 0px;
       color: rgba(255, 255, 255);
@@ -57,7 +57,7 @@
     p {
       color: rgba(255, 255, 255, 0.9);
       margin: 10px 0 10px;
-      font-size: 16px;
+      font-size: 1.75vh;
       font-weight: 200;
       line-height: 1.6em;
     }
@@ -120,9 +120,9 @@
       <h1><strong>🤔 Looks like you are offline!</strong></h1>
       <p>
         📶 Check your internet connection and make sure that you are actually
-        online.
+        online or our system may be under maintenance.
       </p>
-      <p>🔄 Refresh this page once you're back online.</p>
+      <p>🔄 Refresh this page once back online.</p>
     </div>
   </div>
 </body>
