Changes to be committed: 	modified:   common/footer.html

--- a/common/footer.html
+++ b/common/footer.html
@@ -24,7 +24,7 @@
               <img rel="preload" as="image" width="auto" height="55" src="img/TNICyberWeb.png"
                 onclick="location.href='badapple.html'" />
               <img rel="preload" as="image" width="auto" height="55" src="img/TNIIcon.png"
-                onclick="location.href='valentine.html'" />
+                onclick="location.href='404.html'" />
             </span>
           </h5>
           <p class="wow fadeInUp list badge badge-pill circleScaleBtn2" type="button" data-wow-delay="0.2s"
