--- a/common/navbar.html
+++ b/common/navbar.html
@@ -1,7 +1,8 @@
 <nav class="user-select-none">
   <span
     id="brand"
-    class="circleScaleBtn2 logo wow fadeInDown data-wow-delay="0.6s"
+    class="circleScaleBtn2 logo wow fadeInDown"
+    data-wow-delay="0.6s"
     onclick="location.href='index.html'"
   >
     <img
@@ -40,13 +41,19 @@
   </ul>
 
   <div id="toggle">
-    <i class="fas fa-bars wow bounceIn span user-select-none" data-wow-delay="0.6s"></i>
+    <i
+      class="fas fa-bars wow bounceIn span user-select-none"
+      data-wow-delay="0.6s"
+    ></i>
   </div>
 </nav>
 
 <div id="resize">
   <div class="close-btn">
-    <i class="far fa-times-circle wow bounceIn span user-select-none" data-wow-delay="0.6s"></i>
+    <i
+      class="far fa-times-circle wow bounceIn span user-select-none"
+      data-wow-delay="0.6s"
+    ></i>
   </div>
 
   <ul id="menu">
@@ -96,19 +103,26 @@
     $(this).toggleClass("on");
     $("#resize").toggleClass("active");
   });
-  
+
   TweenMax.from("#brand", 1, {
-                  delay: 0.4,
-                  y: 10,
-                  opacity: 0,
-                  ease: Expo.easeInOut
-            })
+    delay: 0.4,
+    y: 10,
+    opacity: 0,
+    ease: Expo.easeInOut,
+  });
 
-            TweenMax.staggerFrom("#menu li a", 1, {
-                  delay: 0.4,
-                  opacity: 0,
-                  ease: Expo.easeInOut
-            }, 0.1);
-
+  TweenMax.staggerFrom(
+    "#menu li a",
+    1,
+    {
+      delay: 0.4,
+      opacity: 0,
+      ease: Expo.easeInOut,
+    },
+    0.1
+  );
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"
+  defer
+></script>
